--- a/index.html
+++ b/index.html
@@ -1059,9 +1059,9 @@
       <div class="overflow-hidden col-md-6 rounded-right-3">
     <div class="d-flex flex-wrap position-relative top-n12 mt-n4 right-n4 p-4 js-build-in-trigger" style="transform: rotate(-15deg) translateZ(10px); max-height: 480px;" data-build-in-stagger="75">
         <div class="col-6 col-sm-4 col-md-6 col-lg-4">
-          <a target="_blank" class="rounded p-4 border color-bg-subtle no-underline d-flex flex-column flex-items-center m-2 box-shadow-default-mktg js-build-in-item build-in-scale-up" tabindex="-1" href="/chaynhq">
-            <img alt="chaynHQ avatar" width="96" height="96" class="d-block rounded" loading="lazy" decoding="async" src="https://github.githubassets.com/assets/chaynhq-4c5953025dca.png" />
-            <div class="color-fg-muted text-truncate my-2">chaynHQ</div>
+          <a target="_blank" class="rounded p-4 border color-bg-subtle no-underline d-flex flex-column flex-items-center m-2 box-shadow-default-mktg js-build-in-item build-in-scale-up" tabindex="-1" >
+            <img alt="chaynHQ avatar" width="96" height="96" class="d-block rounded" loading="lazy" decoding="async" src="awwwards.png" />
+            <div class="color-fg-muted text-truncate my-2">Awwwards/div>
             <button tabindex="-1" type="button" data-view-component="true" class="Button--secondary Button--medium Button">  <span class="Button-content">
       <span class="Button-visual Button-leadingVisual">
         <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-heart">
@@ -1073,107 +1073,107 @@
 </button>
 </a>        </div>
         <div class="col-6 col-sm-4 col-md-6 col-lg-4">
-          <a target="_blank" class="rounded p-4 border color-bg-subtle no-underline d-flex flex-column flex-items-center m-2 box-shadow-default-mktg js-build-in-item build-in-scale-up" tabindex="-1" href="/kazupon">
-            <img alt="kazuya kawaguchi avatar" width="96" height="96" class="d-block circle" loading="lazy" decoding="async" src="https://github.githubassets.com/assets/kazupon-d7aeb7b8df20.jpeg" />
-            <div class="color-fg-muted text-truncate my-2">kazuya kawaguchi</div>
+          <a target="_blank" class="rounded p-4 border color-bg-subtle no-underline d-flex flex-column flex-items-center m-2 box-shadow-default-mktg js-build-in-item build-in-scale-up" tabindex="-1">
+            <img alt="kazuya kawaguchi avatar" width="96" height="96" class="d-block circle" loading="lazy" decoding="async" src="spline.png" />
+            <div class="color-fg-muted text-truncate my-2">Spline</div>
             <button tabindex="-1" type="button" data-view-component="true" class="Button--secondary Button--medium Button">  <span class="Button-content">
       <span class="Button-visual Button-leadingVisual">
         <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-heart">
     <path d="m8 14.25.345.666a.75.75 0 0 1-.69 0l-.008-.004-.018-.01a7.152 7.152 0 0 1-.31-.17 22.055 22.055 0 0 1-3.434-2.414C2.045 10.731 0 8.35 0 5.5 0 2.836 2.086 1 4.25 1 5.797 1 7.153 1.802 8 3.02 8.847 1.802 10.203 1 11.75 1 13.914 1 16 2.836 16 5.5c0 2.85-2.045 5.231-3.885 6.818a22.066 22.066 0 0 1-3.744 2.584l-.018.01-.006.003h-.002ZM4.25 2.5c-1.336 0-2.75 1.164-2.75 3 0 2.15 1.58 4.144 3.365 5.682A20.58 20.58 0 0 0 8 13.393a20.58 20.58 0 0 0 3.135-2.211C12.92 9.644 14.5 7.65 14.5 5.5c0-1.836-1.414-3-2.75-3-1.373 0-2.609.986-3.029 2.456a.749.749 0 0 1-1.442 0C6.859 3.486 5.623 2.5 4.25 2.5Z"></path>
 </svg>
       </span>
-    <span class="Button-label">Sponsor</span>
+    <span class="Button-label">3D Design</span>
   </span>
 </button>
 </a>        </div>
         <div class="col-6 col-sm-4 col-md-6 col-lg-4">
-          <a target="_blank" class="rounded p-4 border color-bg-subtle no-underline d-flex flex-column flex-items-center m-2 box-shadow-default-mktg js-build-in-item build-in-scale-up" tabindex="-1" href="/eslint">
-            <img alt="ESLint avatar" width="96" height="96" class="d-block rounded" loading="lazy" decoding="async" src="astro" />
-            <div class="color-fg-muted text-truncate my-2">Ayush S.</div>
+          <a target="_blank" class="rounded p-4 border color-bg-subtle no-underline d-flex flex-column flex-items-center m-2 box-shadow-default-mktg js-build-in-item build-in-scale-up" tabindex="-1" href="">
+            <img alt="ESLint avatar" width="96" height="96" class="d-block rounded" loading="lazy" decoding="async" src="Webflow.png" />
+            <div class="color-fg-muted text-truncate my-2">Webflow</div>
             <button tabindex="-1" type="button" data-view-component="true" class="Button--secondary Button--medium Button">  <span class="Button-content">
       <span class="Button-visual Button-leadingVisual">
         <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-heart">
     <path d="m8 14.25.345.666a.75.75 0 0 1-.69 0l-.008-.004-.018-.01a7.152 7.152 0 0 1-.31-.17 22.055 22.055 0 0 1-3.434-2.414C2.045 10.731 0 8.35 0 5.5 0 2.836 2.086 1 4.25 1 5.797 1 7.153 1.802 8 3.02 8.847 1.802 10.203 1 11.75 1 13.914 1 16 2.836 16 5.5c0 2.85-2.045 5.231-3.885 6.818a22.066 22.066 0 0 1-3.744 2.584l-.018.01-.006.003h-.002ZM4.25 2.5c-1.336 0-2.75 1.164-2.75 3 0 2.15 1.58 4.144 3.365 5.682A20.58 20.58 0 0 0 8 13.393a20.58 20.58 0 0 0 3.135-2.211C12.92 9.644 14.5 7.65 14.5 5.5c0-1.836-1.414-3-2.75-3-1.373 0-2.609.986-3.029 2.456a.749.749 0 0 1-1.442 0C6.859 3.486 5.623 2.5 4.25 2.5Z"></path>
 </svg>
       </span>
-    <span class="Button-label">Founder</span>
+    <span class="Button-label">Platform</span>
   </span>
 </button>
 </a>        </div>
         <div class="col-6 col-sm-4 col-md-6 col-lg-4">
           <a target="_blank" class="rounded p-4 border color-bg-subtle no-underline d-flex flex-column flex-items-center m-2 box-shadow-default-mktg js-build-in-item build-in-scale-up" tabindex="-1" href="/yyx990803">
-            <img alt="Evan You avatar" width="96" height="96" class="d-block circle" loading="lazy" decoding="async" src="https://github.githubassets.com/assets/yyx990803-e11c7b140b17.jpeg" />
-            <div class="color-fg-muted text-truncate my-2">Evan You</div>
+            <img alt="Evan You avatar" width="96" height="96" class="d-block circle" loading="lazy" decoding="async" src="figma" />
+            <div class="color-fg-muted text-truncate my-2">Figma</div>
             <button tabindex="-1" type="button" data-view-component="true" class="Button--secondary Button--medium Button">  <span class="Button-content">
       <span class="Button-visual Button-leadingVisual">
         <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-heart">
     <path d="m8 14.25.345.666a.75.75 0 0 1-.69 0l-.008-.004-.018-.01a7.152 7.152 0 0 1-.31-.17 22.055 22.055 0 0 1-3.434-2.414C2.045 10.731 0 8.35 0 5.5 0 2.836 2.086 1 4.25 1 5.797 1 7.153 1.802 8 3.02 8.847 1.802 10.203 1 11.75 1 13.914 1 16 2.836 16 5.5c0 2.85-2.045 5.231-3.885 6.818a22.066 22.066 0 0 1-3.744 2.584l-.018.01-.006.003h-.002ZM4.25 2.5c-1.336 0-2.75 1.164-2.75 3 0 2.15 1.58 4.144 3.365 5.682A20.58 20.58 0 0 0 8 13.393a20.58 20.58 0 0 0 3.135-2.211C12.92 9.644 14.5 7.65 14.5 5.5c0-1.836-1.414-3-2.75-3-1.373 0-2.609.986-3.029 2.456a.749.749 0 0 1-1.442 0C6.859 3.486 5.623 2.5 4.25 2.5Z"></path>
 </svg>
       </span>
-    <span class="Button-label">Sponsor</span>
+    <span class="Button-label">Design</span>
   </span>
 </button>
 </a>        </div>
         <div class="col-6 col-sm-4 col-md-6 col-lg-4">
-          <a target="_blank" class="rounded p-4 border color-bg-subtle no-underline d-flex flex-column flex-items-center m-2 box-shadow-default-mktg js-build-in-item build-in-scale-up" tabindex="-1" href="/directus">
-            <img alt="Directus avatar" width="96" height="96" class="d-block rounded" loading="lazy" decoding="async" src="https://github.githubassets.com/assets/directus-4da9e46da0ac.png" />
-            <div class="color-fg-muted text-truncate my-2">Directus</div>
+          <a target="_blank" class="rounded p-4 border color-bg-subtle no-underline d-flex flex-column flex-items-center m-2 box-shadow-default-mktg js-build-in-item build-in-scale-up" tabindex="-1">
+            <img alt="Directus avatar" width="96" height="96" class="d-block rounded" loading="lazy" decoding="async" src="framer.jpg" />
+            <div class="color-fg-muted text-truncate my-2">Framer</div>
             <button tabindex="-1" type="button" data-view-component="true" class="Button--secondary Button--medium Button">  <span class="Button-content">
       <span class="Button-visual Button-leadingVisual">
         <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-heart">
     <path d="m8 14.25.345.666a.75.75 0 0 1-.69 0l-.008-.004-.018-.01a7.152 7.152 0 0 1-.31-.17 22.055 22.055 0 0 1-3.434-2.414C2.045 10.731 0 8.35 0 5.5 0 2.836 2.086 1 4.25 1 5.797 1 7.153 1.802 8 3.02 8.847 1.802 10.203 1 11.75 1 13.914 1 16 2.836 16 5.5c0 2.85-2.045 5.231-3.885 6.818a22.066 22.066 0 0 1-3.744 2.584l-.018.01-.006.003h-.002ZM4.25 2.5c-1.336 0-2.75 1.164-2.75 3 0 2.15 1.58 4.144 3.365 5.682A20.58 20.58 0 0 0 8 13.393a20.58 20.58 0 0 0 3.135-2.211C12.92 9.644 14.5 7.65 14.5 5.5c0-1.836-1.414-3-2.75-3-1.373 0-2.609.986-3.029 2.456a.749.749 0 0 1-1.442 0C6.859 3.486 5.623 2.5 4.25 2.5Z"></path>
 </svg>
       </span>
-    <span class="Button-label">Sponsor</span>
+    <span class="Button-label">Design</span>
   </span>
 </button>
 </a>        </div>
         <div class="col-6 col-sm-4 col-md-6 col-lg-4">
           <a target="_blank" class="rounded p-4 border color-bg-subtle no-underline d-flex flex-column flex-items-center m-2 box-shadow-default-mktg js-build-in-item build-in-scale-up" tabindex="-1" href="/homebrew">
-            <img alt="Homebrew avatar" width="96" height="96" class="d-block rounded" loading="lazy" decoding="async" src="https://github.githubassets.com/assets/homebrew-c7e38eeacb52.png" />
-            <div class="color-fg-muted text-truncate my-2">Homebrew</div>
+            <img alt="Homebrew avatar" width="96" height="96" class="d-block rounded" loading="lazy" decoding="async" src="blender.png" />
+            <div class="color-fg-muted text-truncate my-2">Blender</div>
             <button tabindex="-1" type="button" data-view-component="true" class="Button--secondary Button--medium Button">  <span class="Button-content">
       <span class="Button-visual Button-leadingVisual">
         <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-heart">
     <path d="m8 14.25.345.666a.75.75 0 0 1-.69 0l-.008-.004-.018-.01a7.152 7.152 0 0 1-.31-.17 22.055 22.055 0 0 1-3.434-2.414C2.045 10.731 0 8.35 0 5.5 0 2.836 2.086 1 4.25 1 5.797 1 7.153 1.802 8 3.02 8.847 1.802 10.203 1 11.75 1 13.914 1 16 2.836 16 5.5c0 2.85-2.045 5.231-3.885 6.818a22.066 22.066 0 0 1-3.744 2.584l-.018.01-.006.003h-.002ZM4.25 2.5c-1.336 0-2.75 1.164-2.75 3 0 2.15 1.58 4.144 3.365 5.682A20.58 20.58 0 0 0 8 13.393a20.58 20.58 0 0 0 3.135-2.211C12.92 9.644 14.5 7.65 14.5 5.5c0-1.836-1.414-3-2.75-3-1.373 0-2.609.986-3.029 2.456a.749.749 0 0 1-1.442 0C6.859 3.486 5.623 2.5 4.25 2.5Z"></path>
 </svg>
       </span>
-    <span class="Button-label">Sponsor</span>
+    <span class="Button-label">3D Design</span>
   </span>
 </button>
 </a>        </div>
         <div class="col-6 col-sm-4 col-md-6 col-lg-4">
           <a target="_blank" class="rounded p-4 border color-bg-subtle no-underline d-flex flex-column flex-items-center m-2 box-shadow-default-mktg js-build-in-item build-in-scale-up" tabindex="-1" href="/imolorhe">
-            <img alt="Samuel avatar" width="96" height="96" class="d-block circle" loading="lazy" decoding="async" src="https://github.githubassets.com/assets/imolorhe-9d771b1d4332.jpeg" />
-            <div class="color-fg-muted text-truncate my-2">Samuel</div>
+            <img alt="Samuel avatar" width="96" height="96" class="d-block circle" loading="lazy" decoding="async" src="iBJehkOi_400x400.png" />
+            <div class="color-fg-muted text-truncate my-2">After Effects</div>
             <button tabindex="-1" type="button" data-view-component="true" class="Button--secondary Button--medium Button">  <span class="Button-content">
       <span class="Button-visual Button-leadingVisual">
         <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-heart">
     <path d="m8 14.25.345.666a.75.75 0 0 1-.69 0l-.008-.004-.018-.01a7.152 7.152 0 0 1-.31-.17 22.055 22.055 0 0 1-3.434-2.414C2.045 10.731 0 8.35 0 5.5 0 2.836 2.086 1 4.25 1 5.797 1 7.153 1.802 8 3.02 8.847 1.802 10.203 1 11.75 1 13.914 1 16 2.836 16 5.5c0 2.85-2.045 5.231-3.885 6.818a22.066 22.066 0 0 1-3.744 2.584l-.018.01-.006.003h-.002ZM4.25 2.5c-1.336 0-2.75 1.164-2.75 3 0 2.15 1.58 4.144 3.365 5.682A20.58 20.58 0 0 0 8 13.393a20.58 20.58 0 0 0 3.135-2.211C12.92 9.644 14.5 7.65 14.5 5.5c0-1.836-1.414-3-2.75-3-1.373 0-2.609.986-3.029 2.456a.749.749 0 0 1-1.442 0C6.859 3.486 5.623 2.5 4.25 2.5Z"></path>
 </svg>
       </span>
-    <span class="Button-label">Sponsor</span>
+    <span class="Button-label">Graphics</span>
   </span>
 </button>
 </a>        </div>
         <div class="col-6 col-sm-4 col-md-6 col-lg-4">
           <a target="_blank" class="rounded p-4 border color-bg-subtle no-underline d-flex flex-column flex-items-center m-2 box-shadow-default-mktg js-build-in-item build-in-scale-up" tabindex="-1" href="/dayhaysoos">
-            <img alt="Nick DeJesus avatar" width="96" height="96" class="d-block circle" loading="lazy" decoding="async" src="https://github.githubassets.com/assets/dayhaysoos-c50659cac73b.jpeg" />
-            <div class="color-fg-muted text-truncate my-2">Nick DeJesus</div>
+            <img alt="Nick DeJesus avatar" width="96" height="96" class="d-block circle" loading="lazy" decoding="async" src="vercel.png" />
+            <div class="color-fg-muted text-truncate my-2">vercel</div>
             <button tabindex="-1" type="button" data-view-component="true" class="Button--secondary Button--medium Button">  <span class="Button-content">
       <span class="Button-visual Button-leadingVisual">
         <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-heart">
     <path d="m8 14.25.345.666a.75.75 0 0 1-.69 0l-.008-.004-.018-.01a7.152 7.152 0 0 1-.31-.17 22.055 22.055 0 0 1-3.434-2.414C2.045 10.731 0 8.35 0 5.5 0 2.836 2.086 1 4.25 1 5.797 1 7.153 1.802 8 3.02 8.847 1.802 10.203 1 11.75 1 13.914 1 16 2.836 16 5.5c0 2.85-2.045 5.231-3.885 6.818a22.066 22.066 0 0 1-3.744 2.584l-.018.01-.006.003h-.002ZM4.25 2.5c-1.336 0-2.75 1.164-2.75 3 0 2.15 1.58 4.144 3.365 5.682A20.58 20.58 0 0 0 8 13.393a20.58 20.58 0 0 0 3.135-2.211C12.92 9.644 14.5 7.65 14.5 5.5c0-1.836-1.414-3-2.75-3-1.373 0-2.609.986-3.029 2.456a.749.749 0 0 1-1.442 0C6.859 3.486 5.623 2.5 4.25 2.5Z"></path>
 </svg>
       </span>
-    <span class="Button-label">Sponsor</span>
+    <span class="Button-label">hosting</span>
   </span>
 </button>
 </a>        </div>
         <div class="col-6 col-sm-4 col-md-6 col-lg-4">
           <a target="_blank" class="rounded p-4 border color-bg-subtle no-underline d-flex flex-column flex-items-center m-2 box-shadow-default-mktg js-build-in-item build-in-scale-up" tabindex="-1" href="/curl">
-            <img alt="curl avatar" width="96" height="96" class="d-block rounded" loading="lazy" decoding="async" src="https://github.githubassets.com/assets/curl-24ff778d1afc.jpeg" />
-            <div class="color-fg-muted text-truncate my-2">curl</div>
+            <img alt="curl avatar" width="96" height="96" class="d-block rounded" loading="lazy" decoding="async" src="github.png" />
+            <div class="color-fg-muted text-truncate my-2">Github</div>
             <button tabindex="-1" type="button" data-view-component="true" class="Button--secondary Button--medium Button">  <span class="Button-content">
       <span class="Button-visual Button-leadingVisual">
         <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-heart">
