--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 
   <head>
   <meta charset="utf-8">
-  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/light-0eace2597ca3.css" />
-  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/dark-a167e256da9c.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="light.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="dark.css" />
   
-  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/primer-primitives-2ef2a46b27ee.css" />
-  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/primer-711f412bb361.css" />
-  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/global-8215aa0ce496.css" />
-  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/github-f4d857cbc96a.css" />
-  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/dashboard-1691e09b2199.css" />
-  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/discussions-4a9715cdd9f3.css" />
-  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/site-dfc0853a912d.css" />
-  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/home-b7f602cc1515.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="primer-primitives.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="primer711.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="global821.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="githubf4d.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="dashboard.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="discussions.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="site.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="home.css" />
 
   
 
@@ -138,7 +138,7 @@
 
   
 
-  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/home-b7f602cc1515.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="home.css" />
   <link rel="preload" href="https://github.githubassets.com/assets/mona-sans-d1bf285e9b9b.woff2" as="font" type="font/woff2" crossorigin>
   <meta name="is_logged_out_page" content="true">
 
